--- a/app/src/main/res/layout/frag1.xml
+++ b/app/src/main/res/layout/frag1.xml
@@ -6,7 +6,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="1번 화면 입니다."
+        android:text="Hello World!!"
         android:textSize="40sp"/>
 
 
