주사위 굴리기

--- a/app/src/main/res/layout/frag2.xml
+++ b/app/src/main/res/layout/frag2.xml
@@ -1,13 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/dicenum"
+        android:layout_width="300dp"
+        android:layout_height="140dp"
+        android:textSize="30dp"
+        android:layout_marginTop="150dp"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:text="버튼을 눌러\n주사위를 굴려주세요!"/>
+
+    <Button
+        android:id="@+id/diceroll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2번 화면 입니다."
-        android:textSize="40sp"/>
+        android:text="주사위 굴리기"
+        android:textSize="24dp"
+        android:layout_marginTop="100dp"
+        android:gravity="center"
+        android:layout_gravity="center"/>
+
 
     
 </LinearLayout>
