--- a/app/src/main/res/menu/menu_bottom.xml
+++ b/app/src/main/res/menu/menu_bottom.xml
@@ -5,19 +5,19 @@
         android:id="@+id/navigation_menu1"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_home_24"
-        android:title="MENU1" />
+        android:title="이미지 편집" />
 
     <item
         android:id="@+id/navigation_menu2"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_list_alt_24"
-        android:title="MENU2" />
+        android:title="주사위 굴리기" />
 
     <item
         android:id="@+id/navigation_menu3"
         android:enabled="true"
         android:icon="@drawable/ic_baseline_camera_alt_24"
-        android:title="MENU3" />
+        android:title="GIF 재생" />
 
     <item
         android:id="@+id/navigation_menu4"
