--- a/app/src/main/res/layout/frag2.xml
+++ b/app/src/main/res/layout/frag2.xml
@@ -81,7 +81,7 @@
         android:layout_height="wrap_content"
         android:text="초기화"
         android:layout_gravity="center"
-        android:layout_marginTop="50dp"
+        android:backgroundTint="#E91E63"
         android:id="@+id/btnReset"
         android:textSize="20sp">
 
