주사위 굴리기, 그림판 추가

--- a/app/src/main/res/layout/frag1.xml
+++ b/app/src/main/res/layout/frag1.xml
@@ -17,7 +17,8 @@
             android:text="투명도"
             android:textSize="15dp"
             android:layout_marginRight="10dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:backgroundTint="#EB3F2F" />
 
         <Button
             android:id="@+id/rotation"
@@ -26,7 +27,8 @@
             android:text="회전"
             android:textSize="15dp"
             android:layout_marginRight="10dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:backgroundTint="#5D62EB" />
 
         <Button
             android:id="@+id/visibility"
@@ -34,14 +36,16 @@
             android:layout_height="wrap_content"
             android:text="가리기"
             android:layout_marginRight="10dp"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:backgroundTint="#363636" />
 
         <Button
             android:id="@+id/back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="되돌리기"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:backgroundTint="#C251EB" />
 
     </LinearLayout>
 
